[package]
name = "la_brea"
version = "0.0.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
gumdrop = "0.8.1"
utf8-decode = "1.0.1"

[profile.release]
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[lib]
name = "la_brea"
path = "src/lib.rs"

[[bin]]
name = "la_brea"
path = "src/bin.rs"
